SERVER-50056 Added IGNORED shardVersion to dropCollection command allowing SSV and retrying