src/mongo/s/write_ops/write_op.cpp
@@ -89,7 +89,7 @@ void WriteOp::targetWrites(OperationContext* opCtx,
         // can't retry half a regular multi-write.
         if (endpoints.size() > 1u && !inTransaction) {
             endpoint.shardVersion = ChunkVersion::IGNORED();
-            endpoint.shardVersion.canThrowSSVOnIgnored();
+            endpoint.shardVersion.setToThrowSSVOnIgnored();
         }
 
         targetedWrites->push_back(new TargetedWrite(std::move(endpoint), ref));
